--- a/inventory/sample/inventory.ini
+++ b/inventory/sample/inventory.ini
@@ -2,6 +2,9 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
+worker1 ansible_host=10.15.0.116 ip=10.15.0.114
+worker2 ansible_host=10.15.0.116 ip=10.15.0.115
+master ansible_host=10.15.0.116 ip=10.15.0.113
 # node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
 # node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
 # node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
@@ -12,18 +15,27 @@
 # ## configure a bastion host if your nodes are not directly reachable
 # [bastion]
 # bastion ansible_host=x.x.x.x ansible_user=some_user
+[all:vars]
+ansible_user=root
+ansible_ssh_private_key_file=~/.ssh/id_rsa
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [kube_control_plane]
+master
 # node1
 # node2
 # node3
 
 [etcd]
+master
 # node1
 # node2
 # node3
 
 [kube_node]
+master
+worker1
+worker2
 # node2
 # node3
 # node4
